--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"aws-sdk": "^2.1204.0",
+		"aws4": "^1.11.0",
+		"axios": "^0.27.2",
 		"svelte": "^3.44.0",
 		"vite": "^3.0.4"
 	},
